Massively refactored the RequestReleaseShader() to deal with dangling pointer issue. Expose a inline T* SafeGetObjectFromTable(uint32_t Id) function.

11-07-2023: Make motion object pass in parallel as well for the worst case. Separated opaque/translucent motion pass, they need to be treated carefully.
Added translucent motion pass as well. Minor fix to transform component so that static objects still get their previous world info.

12-07-2023: Added the ability to receive ray tracing shadows for translucent objects, but they're hard shadows. I'll try separating a standalone "Soft shadow" pass.
Added soften pass right after RT shadows, now translucent can receive the shadow. But the penumbra needs to be improved.

13-07-2023: Added proper shadow casting for translucent objects! Also fixed a macro define bug in the motion object shader. Also removed the RTOT stuff and old material shader defines.
Almost ready for the post.

15-07-2023: Minor change to RT shadow. Applied vertex normal for opaque shadow receiving as well. Removed the normal texture sampling in RT shadow, it's weird to sample bump normal here.

16-07-2023: Changed the way to sort opaque renderers. Now I also sort them by material id, so the rendering can reduce the state change. Saved another 0.2ms!!

18-07-2023: Minor code refactoring. Stored another two vertex normal buffer for RT. Gave a huge scale to skybox renderer to prevent glitch when vsync is off.

19-07-2023: Fixed the FPS limiter bug. While loop method is more accuracy than sleep. Wrapped all command pools/buffers/fence/semaphore stuffs into a structure.

20-07-2023: Minor code refactoring in soft RT shadow compute shader, I messed some part of it. 
Did the first experiment of async compute, but the update top level acceleration structure is the only one that can be excuted async...
Fixed the glitch when Vsync is off! The key is to manually wait the presentation. Also enhanced some variables for GT/RT access.