@@ -29,3 +29,4 @@ bEnableDepthPrePass=0
 bParallelSubmission=1
 ParallelThreads=8
 RTDirectionalShadowQuality=1
+bEnableAsyncCompute=1
