@@ -41,15 +41,15 @@
 #define IDC_IMAGEMEMORYBUDGET           1022
 #define IDC_MATERIAL_LIST               1022
 #define IDC_ENABLEDEPTHPREPASS          1023
-#define IDC_ENABLERAYTRACINGOCCLUSIONTEST 1024
 #define IDC_PARALLELTHREADS             1025
 #define IDC_ENABLEPARALLELSUBMISSION    1026
 #define IDC_MATERIAL_GRAPHAREA          1027
+#define IDC_ENABLEPARALLELSUBMISSION2   1028
+#define IDC_ENABLEASYNCCOMPUTE          1028
 #define IDC_MATERIALCOMPILE             1034
 #define IDC_MATERIALSAVE                1035
 #define IDC_MATERIALSAVEALL             1036
 #define IDC_MATERIAL_CULLMODE           1037
-#define IDC_COMBO2                      1038
 #define IDC_MATERIAL_BLENDMODE          1038
 #define ID_VIEWMODE_FULLLIT             32771
 #define ID_VIEWMODE_DIFFUSE             32772
